--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -25,7 +25,7 @@
         %span.color 3分
         ですぐに出品
       .MainIntroduce__Lists__List__Description
-        めんどくさい入力は必要なく、検索も購入もスムーズ！
+      スマホで入力するだけで簡単に出品出来る！
     .MainIntroduce__Lists__List
       .MainIntroduce__Lists__List__Box
         .MainIntroduce__Lists__List__Box--img
@@ -36,7 +36,7 @@
         %span.color シンプル
         で使いやすい
       .MainIntroduce__Lists__List__Description
-        スマホで入力するだけで簡単に出品出来る！
+        めんどくさい入力は必要なく、検索も購入もスムーズ！
     .MainIntroduce__Lists__List
       .MainIntroduce__Lists__List__Box
         .MainIntroduce__Lists__List__Box--img
@@ -76,19 +76,16 @@
       .MainFeatures__Contents__Content__Image
         = image_tag ('topimage/icon-03.png'), class: "content_image"
       .MainFeatures__Contents__Content__Subtitle
-        簡単に売り買い
-        %brできる
+        売上金は即日振込みに対応
       .MainFeatures__Contents__Content__Text
-        スマホ一つで、いつでもどこでも簡単に出品・購入が可能！
+        午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします!
     .MainFeatures__Contents__Content
       .MainFeatures__Contents__Content__Image
         = image_tag ('topimage/icon-04.png'), class: "content_image"
       .MainFeatures__Contents__Content__Subtitle
-        簡単に売り買い
-        %brできる
+        様々な支払いに対応
       .MainFeatures__Contents__Content__Text
-        スマホ一つで、いつでもどこでも簡単に出品・購入が可能！
-
+        お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
 .PickupCategory
   .PickupCategory__Top
     ピックアップカテゴリー
