--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,1 +1,89 @@
-%h1 詳細ページ
+.main
+
+  .main__showMain
+    .main__showMain__contents
+
+      .main__showMain__contents__topContent
+
+        .main__showMain__contents__topContent__itemBox
+
+          %h2.main__showMain__contents__topContent__itemBox__name 
+            ジャージャー麺
+
+          .main__showMain__contents__topContent__itemBox__image
+            %ul
+              %li
+                %img{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/16/IMG_9072.JPG", class: "img"}/
+                %ul.imgList
+                  %li.lists
+                    %img{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/16/IMG_9072.JPG", class: "imgs"}/  
+                  %li.lists
+                    %img{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/17/IMG_9069.JPG", class: "imgs"}/
+
+          .main__showMain__contents__topContent__itemBox__price
+            %span ¥1000
+            .main__showMain__contents__topContent__itemBox__price__tax
+              (税込) 送料込み
+
+          .main__showMain__contents__topContent__itemBox__explanation
+            おいしいおいしいジャージャー麺です！
+          .main__showMain__contents__topContent__itemBox__table
+            %table.showInfo
+              %tbody
+                %tr
+                  %th 出品者
+                  %td 陳 建一
+                %tr
+                  %th カテゴリー
+                  %td 
+                    %a{href: "#", class: "showLink"} 食べ物
+                    %br/
+                    %a{href: "#", class: "showLink"} 中華料理
+                    %br/
+                    %a{href: "#", class: "showLink"} 麺類
+                    %br/
+                %tr
+                  %th ブランド
+                  %td 四川飯店
+                %tr
+                  %th 商品のサイズ
+                  %td 並盛り
+                %tr
+                  %th 商品の状態
+                  %td 出来立て
+                %tr
+                  %th 配送料の負担
+                  %td 送料込み（出品者負担）
+                %tr
+                  %th 発送元の地域
+                  %td 
+                    %a{href: "#", class: "showLink"} 北海道
+                %tr
+                  %th 発送日の目安
+                  %td 1-2日で発送
+
+          .main__showMain__contents__topContent__itemBox__choiceArea
+            %ul
+              %li.likeBtn
+                = icon('fa', 'star starIcon')
+                お気に入り 0
+            %ul.report
+              %li.reportBtn
+                %a{href: "#"}
+                  = icon('fa', 'flag flagIcon')
+                  不適切な商品の通報
+
+        .main__showMain__contents__topContent__commentArea
+          %form.commentForm
+            %textarea
+            %p.notes
+              相手のことを考えて丁寧なコメントを心がけましょう。
+              %br/
+              不快な言葉遣いなどは利用制限や退会処分となることがあります。ります。
+
+      %ul.pageMove
+
+
+      .main__showMain__moreItems
+
+
